<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="magnify_timeline">Magnify Timeline</string>
    <string name="make_chapter">Add a chapter at current position</string>
    <string name="make_chapter_and_skip">Add a chapter at current position and disable before section.</string>
    <string name="make_region_skip">Disable current section.</string>
    <string name="remove_prev_chapter">Remove previous chapter.</string>
    <string name="remove_next_chapter">Remove next chapter</string>
    <string name="undo_chapter">Undo chapter modification</string>
    <string name="redo_chapter">Redo chapter modification</string>
    <string name="chop_video">Split video file at current position.</string>
    <string name="crop">Crop video/image</string>
    <string name="save_video">Save changes to file</string>
    <string name="resolution_480">480</string>
    <string name="resolution_720">720</string>
    <string name="resolution_1280">1280</string>
    <string name="resolution_1920">1920</string>
    <string name="crop_store_to_memory">Store Crop Region to Memory</string>
    <string name="crop_restore_from_memory">Restore Crop Region from Memory</string>
    <string name="reset_crop">Reset Crop Region</string>
    <string name="resolution_button">Change Resolution of the Photo</string>
    <string name="aspect_free">Free</string>
    <string name="aspect_4_3">4:3</string>
    <string name="aspect_16_9">16:9</string>
    <string name="enable_partial_mode">Enable Partial Mode</string>
    <string name="label_part_span">Span Of A Part</string>
    <string name="span_1_min">1 min</string>
    <string name="span_3_min">3 min</string>
    <string name="span_5_min">5 min</string>
    <string name="span_10_min">10 min</string>
    <string name="span_custom">Custom</string>
    <string name="highest_quality">Highest (No Re-Encoding)</string>
    <string name="high_quality">High</string>
    <string name="low_quality">Low</string>
    <string name="middle_quality">Middle</string>
    <string name="keep_hdr">Keep HDR</string>
    <string name="duration_label">Duration</string>
    <string name="video_quality">Video Quality</string>
    <string name="name_hint">Input Display Name</string>
    <string name="radio_export">Export as File</string>
    <string name="radio_overwrite">Overwrite</string>
    <string name="radio_save_as">Save in Media Store</string>
    <string name="file_name_label">Filename</string>
    <string name="aspect_4_3_portrait">4:3 (Portrait)</string>
    <string name="aspect_16_9_portrait">16:9 (Portrait)</string>
    <string name="split_at_current_position">At Current Position</string>
    <string name="split_by_chapters">By Chapters</string>
    <string name="save_all">All</string>
    <string name="save_left">Left of Current Position</string>
    <string name="save_right">Right of Current Position</string>
    <string name="save_current_chapter">Current Chapter</string>
    <string name="aspect_screen_landscape">Screen (Landscape)</string>
    <string name="aspect_screen_portrait">Screen (Portrait)</string>
    <string name="save_current_active_range">Current Active Ranges</string>
    <string name="brightness">Brightness</string>

</resources>