<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/quality_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/radio_highest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/highest_quality"
            />
        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/radio_high"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/high_quality"
            />
        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/radio_middle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/middle_quality"
            />
        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/radio_low"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/low_quality"
            />
    </RadioGroup>
    <LinearLayout
        android:id="@+id/convert_hdr_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/keep_hdr"
            />
        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/check_keep_hdr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/duration_label"
            />
        <TextView
            android:id="@+id/duration_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="16dp"
            android:gravity="end"
            tools:text="00:00.00"
            />
    </LinearLayout>
</LinearLayout>