<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <CheckBox
        android:id="@+id/check_enable_partial_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enable_partial_mode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/label_span_of_part"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_part_span"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/check_enable_partial_mode"
        />
    <RadioGroup
        android:id="@+id/radio_span_selection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_span_of_part"
        >
        <RadioButton
            android:id="@+id/radio_span_3min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/span_3_min"
            />
        <RadioButton
            android:id="@+id/radio_span_5min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/span_5_min"
            />
        <RadioButton
            android:id="@+id/radio_span_10min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/span_10_min"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radio_span_custom"
            android:text="@string/span_custom"
            />
    </RadioGroup>

    <TextView
        android:id="@+id/span_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radio_span_selection"
        tools:text="01:00:00"
        />
    <com.google.android.material.slider.Slider
        android:id="@+id/span_slider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/span_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:stepSize="1"
        />
</androidx.constraintlayout.widget.ConstraintLayout>